Fix broken style imports
Apparently, breaking @value imports into multiple lines
does not break linter, but will break the import itself.
Button and structure css fules now use typography and colors imports

--- a/components/src/buttons.css
+++ b/components/src/buttons.css
@@ -1,8 +1,4 @@
-@value font_size_body_2,
-  font_weight_semibold,
-  color_font_light,
-  color_font_disabled
-  from './styles/typography.css';
+@value font_size_body_2, font_weight_semibold, color_font_light, color_font_disabled from './styles/typography.css';
 @value color_btn_dark: #4a4a4a;
 @value color_btn_dark_hover: #333;
 @value color_btn_dark_active: #6c6c6c;
@@ -20,7 +16,7 @@
 
 .button_dark {
   font-size: font_size_body_2;
-  font-weight: font_weight_bold;
+  font-weight: font_weight_semibold;
   color: color_font_light;
   background-color: color_btn_dark;
 }
